--- a/test.html
+++ b/test.html
@@ -28,8 +28,8 @@
     <script type="text/javascript" src="lib/brat/url_monitor.js"></script>
     <script type="text/javascript" src="lib/brat/visualizer.js"></script>
 
-    <!-- annotation documentation support 
-    <script type="text/javascript" src="http://spyysalo.github.io/annodoc/lib/local/annodoc.js"></script>-->
+    <!-- annotation documentation support -->
+    <script type="text/javascript" src="lib/local/annodoc.js"></script>
     <script type="text/javascript" src="lib/local/config.js"></script>
 
     <!-- the conllu.js library itself -->
@@ -62,8 +62,8 @@
     );
 
     var webFontURLs = [
-        'http://spyysalo.github.io/conllu.js/static/fonts/PT_Sans-Caption-Web-Regular.ttf',
-        'http://spyysalo.github.io/conllu.js/static/fonts/Liberation_Sans-Regular.ttf'
+        'static/fonts/PT_Sans-Caption-Web-Regular.ttf',
+        'static/fonts/Liberation_Sans-Regular.ttf'
     ];
 
     /* not used here */
