after body part

--- a/after_body.html
+++ b/after_body.html
@@ -3,8 +3,8 @@
   );
 
 var webFontURLs = [
-  'http://spyysalo.github.io/conllu.js/static/fonts/PT_Sans-Caption-Web-Regular.ttf',
-  'http://spyysalo.github.io/conllu.js/static/fonts/Liberation_Sans-Regular.ttf'
+  'static/fonts/PT_Sans-Caption-Web-Regular.ttf',
+  'static/fonts/Liberation_Sans-Regular.ttf'
   ];
 
 /* not used here */
@@ -15,9 +15,4 @@ var webFontURLs = [
     Annodoc.activate(Config.bratCollData, documentCollections);
   });
   </script>
-
-<script type="text/javascript">
-  document.addEventListener('DOMContentLoaded', function() {
-    Leipzig({ firstLineOrig: true }).gloss();
-  });
-</script>
+  
