--- a/header.html
+++ b/header.html
@@ -1,42 +1,42 @@
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="http://spyysalo.github.io/conllu.js/css/jquery-ui-redmond.css">
-    <link rel="stylesheet" href="http://spyysalo.github.io/conllu.js/css/main.css">
-    <link rel="stylesheet" href="http://spyysalo.github.io/conllu.js/css/style-vis.css">
+    <link rel="stylesheet" href="css/jquery-ui-redmond.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style-vis.css">
 
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/ext/head.load.min.js"></script>
+    <script type="text/javascript" src="lib/ext/head.load.min.js"></script>
 
     <!-- External libraries -->
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/ext/jquery.min.js"></script>
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/ext/jquery.svg.min.js"></script>
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/ext/jquery.svgdom.min.js"></script>
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/ext/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/ext/waypoints.min.js"></script>
+    <script type="text/javascript" src="lib/ext/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/ext/jquery.svg.min.js"></script>
+    <script type="text/javascript" src="lib/ext/jquery.svgdom.min.js"></script>
+    <script type="text/javascript" src="lib/ext/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="lib/ext/waypoints.min.js"></script>
 
     <!-- brat helper modules -->
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/brat/configuration.js"></script>
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/brat/util.js"></script>
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/brat/annotation_log.js"></script>
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/ext/webfont.js"></script>
+    <script type="text/javascript" src="lib/brat/configuration.js"></script>
+    <script type="text/javascript" src="lib/brat/util.js"></script>
+    <script type="text/javascript" src="lib/brat/annotation_log.js"></script>
+    <script type="text/javascript" src="lib/ext/webfont.js"></script>
 
     <!-- brat modules -->
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/brat/dispatcher.js"></script>
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/brat/url_monitor.js"></script>
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/brat/visualizer.js"></script>
+    <script type="text/javascript" src="lib/brat/dispatcher.js"></script>
+    <script type="text/javascript" src="lib/brat/url_monitor.js"></script>
+    <script type="text/javascript" src="lib/brat/visualizer.js"></script>
 
     <!-- annotation documentation support -->
-    <script type="text/javascript" src="http://spyysalo.github.io/annodoc/lib/local/annodoc.js"></script>
-    <script type="text/javascript" src="http://spyysalo.github.io/conllu.js/lib/local/config.js"></script>
+    <script type="text/javascript" src="lib/local/annodoc.js"></script>
+    <script type="text/javascript" src="lib/local/config.js"></script>
 
     <!-- the conllu.js library itself -->
     <script type="text/javascript" src="conllu.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/0.96/head.min.js"></script>
+    <script src="head.min.js"></script>
 
     <!-- Leipzig.js -->
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/leipzig/latest/leipzig.min.css">
+    <!-- CSS 
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/leipzig/latest/leipzig.min.css">-->
 
-    <!-- JavaScript -->
-    <script src="//cdn.jsdelivr.net/leipzig/latest/leipzig.min.js"></script>
+    <!-- JavaScript
+    <script src="//cdn.jsdelivr.net/leipzig/latest/leipzig.min.js"></script> -->
