--- a/kpv-ud-dev_20.html
+++ b/kpv-ud-dev_20.html
@@ -5,10 +5,10 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>Tree visualization</title>
 
-    <link rel="stylesheet" type="text/css" href="http://universaldependencies.github.io/docs/css/jquery-ui-redmond.css"/>
-    <link rel="stylesheet" type="text/css" href="http://universaldependencies.github.io/docs/css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="http://universaldependencies.github.io/docs/css/style-vis.css"/>
-    <script type="text/javascript" src="http://universaldependencies.github.io/docs/lib/ext/head.load.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui-redmond.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style-vis.css"/>
+    <script type="text/javascript" src="head.load.min.js"></script>
 <!--     <link rel="shortcut icon" href="favicon.ico"/> -->
   </head>
   <body>
@@ -280,7 +280,7 @@
 	root + 'conllu.js'
 	//root + 'lib/local/config.js'
     );
-    
+
 
     var bratCollData = {
 	'entity_types': [
@@ -319,7 +319,7 @@
   'entity_attribute_types': [
         {
             'type':   'Name',
-            'values': { 
+            'values': {
                 'Name' : { 'glyph': '(N)' },
              },
          },
@@ -351,4 +351,3 @@
     </div>
   </body>
 </html>
-
