--- a/kpv-ud-dev_20.html
+++ b/kpv-ud-dev_20.html
@@ -256,7 +256,7 @@
 
 <script type="text/javascript">
     // TODO pull this stuff from a more reasonable location
-    var root = 'http://spyysalo.github.io/conllu.js/';
+    var root = 'https://nikopartanen.github.io/conllu-vis/';
     head.js(
         // External libraries
         root + 'lib/ext/jquery.min.js',
@@ -276,7 +276,7 @@
         root + 'lib/brat/visualizer.js',
 
         // embedding support modules
-        'http://spyysalo.github.io/annodoc/lib/local/annodoc.js',
+        'https://nikopartanen.github.io/conllu-vis/lib/local/annodoc.js',
 	root + 'conllu.js'
 	//root + 'lib/local/config.js'
     );
