--- a/header.html
+++ b/header.html
@@ -1,38 +1,13 @@
-    <meta charset="utf-8">
 
-    <link rel="stylesheet" href="css/jquery-ui-redmond.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/style-vis.css">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <title>Tree visualization</title>
 
-    <script type="text/javascript" src="lib/ext/head.load.min.js"></script>
-
-    <!-- External libraries -->
-    <script type="text/javascript" src="lib/ext/jquery.min.js"></script>
-    <script type="text/javascript" src="lib/ext/jquery.svg.min.js"></script>
-    <script type="text/javascript" src="lib/ext/jquery.svgdom.min.js"></script>
-    <script type="text/javascript" src="lib/ext/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="lib/ext/waypoints.min.js"></script>
-
-    <!-- brat helper modules -->
-    <script type="text/javascript" src="lib/brat/configuration.js"></script>
-    <script type="text/javascript" src="lib/brat/util.js"></script>
-    <script type="text/javascript" src="lib/brat/annotation_log.js"></script>
-    <script type="text/javascript" src="lib/ext/webfont.js"></script>
-
-    <!-- brat modules -->
-    <script type="text/javascript" src="lib/brat/dispatcher.js"></script>
-    <script type="text/javascript" src="lib/brat/url_monitor.js"></script>
-    <script type="text/javascript" src="lib/brat/visualizer.js"></script>
-
-    <!-- annotation documentation support -->
-    <script type="text/javascript" src="lib/local/annodoc.js"></script>
-    <script type="text/javascript" src="lib/local/config.js"></script>
-
-    <!-- the conllu.js library itself -->
-    <script type="text/javascript" src="conllu.js"></script>
-
-    <script src="head.min.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui-redmond.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style-vis.css"/>
+    <script type="text/javascript" src="head.load.min.js"></script>
+<!--     <link rel="shortcut icon" href="favicon.ico"/> -->
+  
     <!-- Leipzig.js -->
 
     <!-- CSS 
