--- a/conllu-vis.html
+++ b/conllu-vis.html
@@ -141,10 +141,10 @@ $(document).ready(function () {
 
 
 <h2 id="section"></h2>
-<div class="conllu-parse" tabs="yes">1	А	а	SCONJ	_	_	5	mark
-2	сэсся	сэсся	ADV	_	_	4	advmod
+<div class="conllu-parse" tabs="yes">1	А	а	SCONJ	_	_	2	cc
+2	сэсся	сэсся	ADV	_	_	5	advmod
 3	пыр	пыр	ADV	_	_	4	advmod
-4	отаджыкӧсь	ота	ADJ	_	_	5	advcl
+4	отаджыкӧсь	ота	ADJ	_	_	5	amod
 5	лоисны	лоны	VERB	_	_	0	root
 6	.	.	PUNCT	_	_	5	punct
 </div>
